ref: update java project loom components pages